--- a/SampleStringsiOS/da.lproj/Localizable.strings
+++ b/SampleStringsiOS/da.lproj/Localizable.strings
@@ -8,7 +8,7 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "Meddelelser";
+"MAIN_TITLE_NOTIFICATIONS" = "Meddelelseradasd";
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "For at synkronisere din V650 med Flow-appen skal du vælge 'Synkroniser med mobil' fra sidemenuen af din V650.";
