--- a/SampleStringsiOS/da.lproj/Localizable.strings
+++ b/SampleStringsiOS/da.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "BENEFIT_NO_DESCRIPTION" = "asdasdDu skal træne mindst 10 minutter over 50 % af din beregnede maks. pulsværdi for at få feedback. SKRÄÄKKE dö";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
-"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Grundlæggende og stabil tilstands-træning";
+"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "assadd Grundlæggende og stabil tilstands-træning";
 
 /* Sync notification success */
 "SYNC_NOTIFICATION_DEVICE_SUCCESS" = "Datasynkronisering med %@ gennemført.";
