--- a/SampleStringsiOS/da.lproj/Localizable.strings
+++ b/SampleStringsiOS/da.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Meddelelseradasd";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "For at synkronisere din V650 med Flow-appen skal du vælge 'Synkroniser med mobil' fra sidemenuen af din V650.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "For at synkronisere din V650 med Flow-appen skal asdasddu vælge 'Synkroniser med mobil' fra sidemenuen af din V650.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% af FTP";
@@ -29,7 +29,7 @@
 "SYNC_NOTIFICATION_DEVICE_FAILED" = "Datasynkronisering med %@ mislykkedes. Prøv igen.";
 
 /* Battery status title in devices view */
-"DEVICES_BATTERY_STATUS_TITLE" = "Batteristatus efter synkronisering: %@ %%";
+"DEVICES_BATTERY_STATUS_TITLE" = "Batteristatusfter synkronisering: %@ %%";
 
 /* Registration do initial mobile FTU setup info text */
 "REGISTRATION_DO_INITIAL_MOBILE_FTU_SETUP_INFO_TEXT" = "Kontrollér venligst, at Bluetooth er aktiveret både på din telefon og på enheden, og hold dem tæt på hinanden under opsætningen. Du kan også foretage opsætningen med din computer, hvis du foretrækker det.";
