--- a/SampleStringsiOS/fr.lproj/Localizable.strings
+++ b/SampleStringsiOS/fr.lproj/Localizable.strings
@@ -17,10 +17,10 @@
 "UNIT_PERCENT_OF_FTP" = "% de FTP";
 
 /* Benefit no description */
-"BENEFIT_NO_DESCRIPTION" = "asdasdVous devez vous entraîner au moins 10 minutes au-dessus de 50 % de votre FC max calculée pour bénéficier de commentaires.";
+"BENEFIT_NO_DESCRIPTION" = "Vous devez vous entraîner au moins 10 minutes au-dessus de 50 % de votre FC max calculée pour bénéficier de commentaires.";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
-"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Entraînement de base et régulier";
+"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Entraînement de base et régulier testia";
 
 /* Sync notification success */
 "SYNC_NOTIFICATION_DEVICE_SUCCESS" = "Synchronisation des données avec le %@ terminée.";
