--- a/SampleStringsiOS/cs.lproj/Localizable.strings
+++ b/SampleStringsiOS/cs.lproj/Localizable.strings
@@ -110,7 +110,7 @@
 "EXERCISE_TIP_E181" = "Dnes máte kondici šampiona, jen do toho!";
 
 /* Empty state for Sleep Plus Stages */
-"SLEEP_PLUS_STAGES_EMPTY_STATE_DESCRIPTION" = "Funkce Sleep Plus Stages™ měří množství a kvalitu spánku. Každé ráno zobrazí číselné hodnocení spánku (kvalitu spánku) na základě porovnání uplynulé noci s ukazateli účinného nočního spánku dle nejnovějších vědeckých poznatků.";
+"SLEEP_PLUS_STAGES_EMPTY_STATE_DESCRIPTION" = "asdassad Funkce Sleep Plus Stages™ měří množství a kvalitu spánku. Každé ráno zobrazí číselné hodnocení spánku (kvalitu spánku) na základě porovnání uplynulé noci s ukazateli účinného nočního spánku dle nejnovějších vědeckých poznatků.";
 
 /* Sleep tip category: General */
 "SLEEP_TIP_G643" = "Večer si vyhraďte čas na zklidnění. Možná tak usnete dříve a budete spát déle.";
