--- a/SampleStringsiOS/da.lproj/Localizable.strings
+++ b/SampleStringsiOS/da.lproj/Localizable.strings
@@ -71,7 +71,7 @@
 "TDI_DESCENT" = "Ned\U00ADstig\U00ADning";
 
 /* Training display item sport profile settings - vertical speed*/
-"TDI_VERTICAL_SPEED_MOVING_AVG" = "Ver\U00ADti\U00ADkal has\U00ADtig\U00ADhed";
+"TDI_VERTICAL_SPEED_MOVING_AVG" = "Ver\U00ADti\U00ADkal has\U00ADtig\U00ADhed asdasd";
 
 /* Training display item sport profile settings - left/right balance*/
 "TDI_CURRENT_POWER_LEFT_RIGHT_BALANCE" = "Ven\U00ADstre/\U00ADhøj\U00ADre-ba\U00ADlan\U00ADce";
