--- a/SampleStringsiOS/fi.lproj/Localizable.strings
+++ b/SampleStringsiOS/fi.lproj/Localizable.strings
@@ -107,7 +107,7 @@
 "EXERCISE_TIP_E123" = "Anna palaa! Katso tarkemmat treeniohjeet kellostasi!";
 
 /* Tip for exercise */
-"EXERCISE_TIP_E181" = "Tänään voit olla mestari, joten anna palaa!";
+"EXERCISE_TIP_E181" = "Tänään voit olla mestari, joten anna palaa! asdasd ";
 
 /* Empty state for Sleep Plus Stages */
 "SLEEP_PLUS_STAGES_EMPTY_STATE_DESCRIPTION" = "Sleep Plus Stages™ ‑toiminto mittaa unesi määrän ja laadun. Näet joka aamu numeerisen unituloksen (unen tilan), joka kuvaa sitä, miten hyvin nukuit verrattuna unitieteen tämänhetkisen tiedon mukaisiin hyvän yöunen indikaattoreihin.";
