--- a/SampleStringsiOS/sl.lproj/Localizable.strings
+++ b/SampleStringsiOS/sl.lproj/Localizable.strings
@@ -77,7 +77,7 @@
 "TDI_CURRENT_POWER_LEFT_RIGHT_BALANCE" = "Raz\U00ADmer\U00ADje mo\U00ADči le\U00ADva/des\U00ADna";
 
 /*cardio load*/
-"CARDIO_LOAD_BUILDUP_INFO_INJURY_AND_ILLNESS_RISK" = "<b>Tveganje za poškodbe in bolezni</b>";
+"CARDIO_LOAD_BUILDUP_INFO_INJURY_AND_ILLNESS_RISK" = "<b>Tveganje za poškodbe in bolezni asdasd </b>";
 
 /*training load contextual info drawers*/
 "CARDIO_LOAD_STATUS_QUESTION_SIX" = "Kako poskrbim, da bo moj status produktiven?";
