--- a/SampleStringsiOS/es.lproj/Localizable.strings
+++ b/SampleStringsiOS/es.lproj/Localizable.strings
@@ -11,13 +11,13 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Notificacionesjusp : coma el estas ";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "asdasdaToimiikohan samalla repolla? Para sincronizar tu V650 con la app Flow, selecciona 'Sincronizar con móvil' en el menú lateral de tu V650.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "Toimiikohan samalla repolla? Para sincronizar tu V650 con la app Flow, selecciona 'Sincronizar con móvil' en el menú lateral de tu V650.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% de FTP";
 
 /* Benefit no description */
-"BENEFIT_NO_DESCRIPTION" = "Necesitas entrenar al menos 10 minutos por encima del 50% de tu frecuencia cardíaca máxima calculada para obtener feedback.";
+"BENEFIT_NO_DESCRIPTION" = "Time stamppi testiNecesitas entrenar al menos 10 minutos por encima del 50% de tu frecuencia cardíaca máxima calculada para obtener feedback.";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
 "BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Entrenamiento básico y por ritmo constante";
