--- a/SampleStringsiOS/es.lproj/Localizable.strings
+++ b/SampleStringsiOS/es.lproj/Localizable.strings
@@ -38,7 +38,7 @@
 "BALANCE_WEIGHT_DIFFERS_MORE_10" = "El peso que acabas de medir (%@) difiere en más de un 10 %% de tu peso anterior (%@).";
 
 /* into text for licenses */
-"LICENSE_INTRO" = "Third-party licenses\n\nPolar Flow uses certain third-party open-source software. Below you can see which software we’ve been using, and also the applicable copyright and other notices, permissions and acknowledgements.\n\nOur thanks goes to the developers.";
+"LICENSE_INTRO" = "asdasdThird-party licenses\n\nPolar Flow uses certain third-party open-source software. Below you can see which software we’ve been using, and also the applicable copyright and other notices, permissions and acknowledgements.\n\nOur thanks goes to the developers.";
 
 /* A pop-up is shown to the user, which informs that a new SW update is available. */
 "SENSOR_FWU_STARTUP_DESCRIPTION" = "Hay una actualización disponible para %@.\nEl proceso de actualización puede tardar unos minutos.";
