--- a/SampleStringsiOS/cs.lproj/Localizable.strings
+++ b/SampleStringsiOS/cs.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "UNIT_PERCENT_OF_FTP" = "% FTP";
 
 /* Benefit no description */
-"BENEFIT_NO_DESCRIPTION" = "Abyste získali zpětnou vazbu, musíte trénovat alespoň 10 minut nad 50 % vaší vypočtené maximální tepové frekvence.";
+"BENEFIT_NO_DESCRIPTION" = "asdasd Abyste získali zpětnou vazbu, musíte trénovat alespoň 10 minut nad 50 % vaší vypočtené maximální tepové frekvence.";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
 "BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Základní trénink a trénink vytrvalostiasdasdasd";
