--- a/SampleStringsiOS/pl.lproj/Localizable.strings
+++ b/SampleStringsiOS/pl.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "BENEFIT_NO_DESCRIPTION" = "Aby poznać informacje na temat treningu, musisz ćwiczyć przez co najmniej 10 minut z intensywnością powyżej 50% Twojego maksymalnego tętna.";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
-"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Trening podstawowy i ogólnorozwojowy";
+"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "asdasdTrening podstawowy i ogólnorozwojowy";
 
 /* Sync notification success */
 "SYNC_NOTIFICATION_DEVICE_SUCCESS" = "asdasdZakończono synchronizowanie danych z %@.";
