--- a/SampleStringsiOS/fr.lproj/Localizable.strings
+++ b/SampleStringsiOS/fr.lproj/Localizable.strings
@@ -11,13 +11,13 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Notifications fransuaa";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "Pour synchroniser votre V650 avec l'application Flow, sélectionnez 'Sync avec mobile' dans le menu du bouton latéral de votre V650.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "asd Pour synchroniser votre V650 avec l'application Flow, sélectionnez 'Sync avec mobile' dans le menu du bouton latéral de votre V650.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% de FTP";
 
 /* Benefit no description */
-"BENEFIT_NO_DESCRIPTION" = "Vous devez vous entraîner au moins 10 minutes au-dessus de 50 % de votre FC max calculée pour bénéficier de commentaires.";
+"BENEFIT_NO_DESCRIPTION" = "Vous devez vous entraîner au moins 10 minutes au-dessus de 50 % de votre FC max calculée pour bénéficier de commentaires. ei";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
 "BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Entraînement de base et régulier testia";
