--- a/SampleStringsiOS/ko.lproj/Localizable.strings
+++ b/SampleStringsiOS/ko.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "기본 및 스테디 상태 훈련";
 
 /* Sync notification success */
-"SYNC_NOTIFICATION_DEVICE_SUCCESS" = "%@와(과) 데이터 동기화를 완료했습니다.";
+"SYNC_NOTIFICATION_DEVICE_SUCCESS" = "%@와(과) 데이터 동기화를 완료했습니다.asdasd";
 
 /* Sync notification failed */
 "SYNC_NOTIFICATION_DEVICE_FAILED" = "%@와(과) 데이터를 동기화하는 데 실패했습니다. 다시 시도하십시오.";
