--- a/SampleStringsiOS/hu.lproj/Localizable.strings
+++ b/SampleStringsiOS/hu.lproj/Localizable.strings
@@ -8,7 +8,7 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "Értesítések";
+"MAIN_TITLE_NOTIFICATIONS" = "Értesítések HU!";
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "A V650 óra szinkronizálásához a Polar Flow alkalmazással, válaszd ki a „Szinkronizálás mobillal” lehetőséget a V650 óra oldalsó menüjéből.";
