--- a/SampleStringsiOS/de.lproj/Localizable.strings
+++ b/SampleStringsiOS/de.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "MAIN_TITLE_NOTIFICATIONS" = "asdasdBenachrichtigungenasdasd";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " asdasdUm deinen V650 mit der Flow App zu synchronisieren, wähle im Seitenmenü deines V650 die Option 'Sync. mit Mobilgerät'.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " SAKSA Um deinen V650 mit der Flow App zu synchronisieren, wähle im Seitenmenü deines V650 die Option 'Sync. mit Mobilgerät'.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% FTP";
