--- a/SampleStringsiOS/da.lproj/Localizable.strings
+++ b/SampleStringsiOS/da.lproj/Localizable.strings
@@ -11,13 +11,13 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Meddelelseradasd";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " Testi jag For at synkronisere din V650 med Flow-appen skal asdasddu vælge 'Synkroniser med mobil' fra sidemenuen af din V650.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " jag For at synkronisere din V650 med Flow-appen skal asdasddu vælge 'Synkroniser med mobil' fra sidemenuen af din V650.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% af FTP";
 
 /* Benefit no description */
-"BENEFIT_NO_DESCRIPTION" = "Timestamp . Du skal træne mindst 10 minutter over 50 % af din beregnede maks. pulsværdi for at få feedback. SKRÄÄKKE dö";
+"BENEFIT_NO_DESCRIPTION" = "Timestamp . asdDu skal træne mindst 10 minutter over 50 % af din beregnede maks. pulsværdi for at få feedback. SKRÄÄKKE dö";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
 "BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "assadd Grundlæggende og stabil tilstands-træning";
