--- a/SampleStringsiOS/et.lproj/Localizable.strings
+++ b/SampleStringsiOS/et.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "BENEFIT_NO_DESCRIPTION" = "onko unkari Tagasiside saamiseks pead treenima vähemalt 10 minutit nii, et südame löögisagedus oleks rohkem kui 50% arvutatud löögisageduse maksimumist.";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
-"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Põhi- ja püsivustreening";
+"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Põhi- ja püsivustreening asdasd";
 
 /* Sync notification success */
 "SYNC_NOTIFICATION_DEVICE_SUCCESS" = "Andmete sünkroonimine teenusega %@ on lõpetatud.";
