--- a/SampleStringsiOS/cs.lproj/Localizable.strings
+++ b/SampleStringsiOS/cs.lproj/Localizable.strings
@@ -32,7 +32,7 @@
 "DEVICES_BATTERY_STATUS_TITLE" = "Stav baterie při synchronizaci: %@ %%";
 
 /* Registration do initial mobile FTU setup info text */
-"REGISTRATION_DO_INITIAL_MOBILE_FTU_SETUP_INFO_TEXT" = "Dbejte na to, aby na telefonu i na přístroji bylo aktivovano Bluetooth, a mějte při nastavení obě zařízení položená vedle sebe. Pokud chcete, můžete nastavení provést i přes počítač.";
+"REGISTRATION_DO_INITIAL_MOBILE_FTU_SETUP_INFO_TEXT" = "asdasdDbejte na to, aby na telefonu i na přístroji bylo aktivovano Bluetooth, a mějte při nastavení obě zařízení položená vedle sebe. Pokud chcete, můžete nastavení provést i přes počítač.";
 
 /* Balance weight measurement*/
 "BALANCE_WEIGHT_DIFFERS_MORE_10" = "asdasdHmotnost, kterou jste právě naměřili (%@), se od předchozí hmotnosti (%@) liší o více než 10%%.";
