--- a/SampleStringsiOS/cs.lproj/Localizable.strings
+++ b/SampleStringsiOS/cs.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Uasdpozorněn Toimiikohan samalla repolla? Iltatesti";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " Tsekki Chcete-li asdasdsynchronizovat přístroj V650 s aplikací Flow, zvolte „Synchronizovat s mobilem“ v postranní nabídce přístroje V650.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " Tsekki Chcete-li asdasdsynchronizovat přístroj V650 s aplikací Flow, zvolte „Synchronizovat sasda mobilem“ v postranní nabídce přístroje V650.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% FTP";
