--- a/SampleStringsiOS/da.lproj/Localizable.strings
+++ b/SampleStringsiOS/da.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "UNIT_PERCENT_OF_FTP" = "% af FTP";
 
 /* Benefit no description */
-"BENEFIT_NO_DESCRIPTION" = "Timestamp tanska. asdDu skal træne mindst 10 minutter over 50 % af din beregnede maks. pulsværdi for at få feedback. SKRÄÄKKE dö";
+"BENEFIT_NO_DESCRIPTION" = "Timestamp tanska. asdDu skal træne mindst 10 minutter over 50 % af din beregnede maks. pulsværdi for at få feedback. SasdasdKRÄÄKKE dö";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
 "BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "assadd Grundlæggende og stabil tilstands-træning";
