--- a/SampleStringsiOS/de.lproj/Localizable.strings
+++ b/SampleStringsiOS/de.lproj/Localizable.strings
@@ -8,7 +8,7 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "asdasdBenachrichtigungenasdasd";
+"MAIN_TITLE_NOTIFICATIONS" = "asdasdBenachrichtigungenasdasd hahaha ";
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " SAKSA Um deinen V650 mit der Flow App zu synchronisieren, wähle im Seitenmenü deines V650 die Option 'Sync. asdasdmit Mobilgerät'.";
