--- a/SampleStringsiOS/fi.lproj/Localizable.strings
+++ b/SampleStringsiOS/fi.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "SYNC_NOTIFICATION_DEVICE_SUCCESS" = "%@ synkronoitu.";
 
 /* Sync notification failed */
-"SYNC_NOTIFICATION_DEVICE_FAILED" = "Laitteen %@ synkronointi epäonnistui. Yritä uudelleen.";
+"SYNC_NOTIFICATION_DEVICE_FAILED" = "Laitteen %@ synkronointi epäonnistui. Yritä uudelleen. asdasd";
 
 /* Battery status title in devices view */
 "DEVICES_BATTERY_STATUS_TITLE" = "Akun tila synkkauksen hetkellä: %@ %%";
