--- a/SampleStringsiOS/de.lproj/Localizable.strings
+++ b/SampleStringsiOS/de.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "UNIT_PERCENT_OF_FTP" = "% FTP";
 
 /* Benefit no description */
-"BENEFIT_NO_DESCRIPTION" = "iltatesti tesDu musst mindestens 10 Minuten mit über 50 % deiner berechneten maximalenasdasdsa Herzfrequenz trainieren, um Feedback zu erhalten. Jups";
+"BENEFIT_NO_DESCRIPTION" = "iltatesti tesDu musst mindestens 10 Minuten mit über 50 % deiner berechneten maximalenasdasdsa Herzfrequenz traeren, um Feedback zu erhalten. Jups";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
 "BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Basis- und Herz-Kreislauftraining jou";
