--- a/SampleStringsiOS/de.lproj/Localizable.strings
+++ b/SampleStringsiOS/de.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "SYNC_NOTIFICATION_DEVICE_SUCCESS" = "Synchronisierung der Daten mit %@ abgeschlossen";
 
 /* Sync notification failed */
-"SYNC_NOTIFICATION_DEVICE_FAILED" = "Synchronisierung der Daten mit %@ fehlgeschlagen. Bitte versuche es noch einmalasdasd.";
+"SYNC_NOTIFICATION_DEVICE_FAILED" = "asdasd Synchronisierung der Daten mit %@ fehlgeschlagen. Bitte versuche es noch einmalasdasd.";
 
 /* Battery status title in devices view */
 "DEVICES_BATTERY_STATUS_TITLE" = "Akkustatus wenn synchronisiert: %@ %%";
