--- a/SampleStringsiOS/de.lproj/Localizable.strings
+++ b/SampleStringsiOS/de.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " SAKSA Um asdasddeinen V650 mit der Flow App zu synchronisieren, wähle iasdas Seitenmenü deines V650 die Option 'Sync. asdasdmit Mobilgerät'.";
 
 /* % of FTP unit */
-"UNIT_PERCENT_OF_FTP" = "% FTP";
+"UNIT_PERCENT_OF_FTP" = "% FTP jeeee??";
 
 /* Benefit no description */
 "BENEFIT_NO_DESCRIPTION" = "  iltatesti asdasdtesDu musst mindestens 10 Minuten mit über 50 % deiner asdsd berecht maximalendsdsa Herzfrequenz traeren, um Feedback zu erhalten. Jups";
