--- a/SampleStringsiOS/fi.lproj/Localizable.strings
+++ b/SampleStringsiOS/fi.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "BENEFIT_NO_DESCRIPTION" = "Palautetta asdasd harjoituksista saat vasta, kun olet harjoitellut vähintään kymmenen minuuttia niin, että sykkeesi on vähintään puolet maksimisykkeestäsi.";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
-"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = " kokkerör Perus- ja keskitehoinen harjoitus SUOMI testi";
+"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = " kokkerör Perus- ja keskitehoinen harjoitus SUOMI testi asdasd";
 
 /* Sync notification success */
 "SYNC_NOTIFICATION_DEVICE_SUCCESS" = "%@ synkronoitu.";
