--- a/SampleStringsiOS/fr.lproj/Localizable.strings
+++ b/SampleStringsiOS/fr.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Notifications RANSKA";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "Ranska Pour synchroniser votre V650 avec l'application Flow, sélectionnez 'Sync avec mobile' dans le menu du bouton latéral de votre V650.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "muutos Ranska Pour synchroniser votre V650 avec l'application Flow, sélectionnez 'Sync avec mobile' dans le menu du bouton latéral de votre V650.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% de FTP";
