--- a/SampleStringsiOS/nl.lproj/Localizable.strings
+++ b/SampleStringsiOS/nl.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Meldingen";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "Selecteer 'Synchroniseren met mobiel' in het zij-menu van je V650 om je V650 te synchroniseren met de Flow app.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "Selecteer 'asdasd Synchroniseren met mobiel' in het zij-menu van je V650 om je V650 te synchroniseren met de Flow app.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% van FTP";
