--- a/SampleStringsiOS/da.lproj/Localizable.strings
+++ b/SampleStringsiOS/da.lproj/Localizable.strings
@@ -8,10 +8,10 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "Meddelelseradasd asd";
+"MAIN_TITLE_NOTIFICATIONS" = "Meddelelseradasd";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " djag For at synkronisere din V650 med Flow-appen skal asdasddu vælge 'Synkroniser med mobil' fra sidemenuen af din V650.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " Noniin djag For at synkronisere din V650 med Flow-appen skal asdasddu vælge 'Synkroniser med mobil' fra sidemenuen af din V650.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% af FTP";
