--- a/SampleStringsiOS/es.lproj/Localizable.strings
+++ b/SampleStringsiOS/es.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "Toimiikohan samalla repolla? Para sincronizar tu V650 con la app Flow, selecciona 'Sincronizar con móvil' en el menú lateral de tu V650.";
 
 /* % of FTP unit */
-"UNIT_PERCENT_OF_FTP" = "% de FTP";
+"UNIT_PERCENT_OF_FTP" = "% de FTP Johannes";
 
 /* Benefit no description */
 "BENEFIT_NO_DESCRIPTION" = "Time stamppi testiNecesitas entrenar al menos 10 minutos por encima del 50% de tu frecuencia cardíaca máxima calculada para obtener feedback.";
