--- a/SampleStringsiOS/fr.lproj/Localizable.strings
+++ b/SampleStringsiOS/fr.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "muutos Ranska Pour synchroniser votre V650 avec l'application Flow, sélectionnez 'Sync avec mobile' dans le menu du bouton latéral de votre V650.";
 
 /* % of FTP unit */
-"UNIT_PERCENT_OF_FTP" = "% de FTP";
+"UNIT_PERCENT_OF_FTP" = "% de FTP johannes";
 
 /* Benefit no description */
 "BENEFIT_NO_DESCRIPTION" = "Vous devez vous entraîner au moins 10 minutes au-dessus de 50 % de votre FC max calculée pour bénéficier de commentaires. ei";
