--- a/SampleStringsiOS/zh-Hans.lproj/Localizable.strings
+++ b/SampleStringsiOS/zh-Hans.lproj/Localizable.strings
@@ -8,7 +8,7 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "通知";
+"MAIN_TITLE_NOTIFICATIONS" = "通知 MUUTOS";
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "如需用 Flow 应用程序与 V650 同步，请从 V650 的侧边侧边菜单中选择 '与移动设备同步'。";
