--- a/SampleStringsiOS/sl.lproj/Localizable.strings
+++ b/SampleStringsiOS/sl.lproj/Localizable.strings
@@ -8,7 +8,7 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "Obvestila";
+"MAIN_TITLE_NOTIFICATIONS" = "Obvestila MUUTOS";
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "Če želite kolesarski računalnik V650 sinhronizirati z aplikacijo Polar Flow, izberite »Sinhroniziraj z mobilno napravo« (»Sync with Mobile«) v stranskem meniju V650.";
