--- a/SampleStringsiOS/hu.lproj/Localizable.strings
+++ b/SampleStringsiOS/hu.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Értesítések HU!";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "UNKARI A V650 óra szinkronizálásához a Polar Flow alkalmazással, válaszd ki a „Szinkronizálás mobillal” lehetőséget a V650 óra oldalsó menüjéből.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "UNKARI A V650 óra szinkronizálásához a Polar Flow alkalmazással, válaszd ki a „Szinkronizálás mobillalasdasd” lehetőséget a V650 óra oldalsó menüjéből.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "FTP%";
