--- a/SampleStringsiOS/it.lproj/Localizable.strings
+++ b/SampleStringsiOS/it.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Avvisi Avantti Napoli!";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "Per sincronizzare il V650 con l’app Flow, selezionare 'Sincronizza con dispositivo mobile' dal menu laterale del V650.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "asasdPer sincronizzare il V650 con l’app Flow, selezionare 'Sincronizza con dispositivo mobile' dal menu laterale del V650.";
 
 /* % of FTP unit */
 "UNIT_PERCENT_OF_FTP" = "% di FTP";
