--- a/SampleStringsiOS/et.lproj/Localizable.strings
+++ b/SampleStringsiOS/et.lproj/Localizable.strings
@@ -8,7 +8,7 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "Teatised";
+"MAIN_TITLE_NOTIFICATIONS" = "Teatised TEST";
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "V650 veekasi sünkroonimiseks Polar Flow' rakendusega vali V650 külgmenüüst Sünkrooni mobiiliga.";
