--- a/SampleStringsiOS/de.lproj/Localizable.strings
+++ b/SampleStringsiOS/de.lproj/Localizable.strings
@@ -8,7 +8,7 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "Benachrichtigungenasdasd SAKSA TEST";
+"MAIN_TITLE_NOTIFICATIONS" = "Benachrichtigungenasdasd SAKSA TEST TEST2";
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " SAKSA Um asdasddeinen V650 mit der Flow App zu synchronisieren, asdasdwähle iasdas Seitenmenü deines V650 die Option 'Sync. asdasdmit Mobilgerät'.";
