--- a/SampleStringsiOS/de.lproj/Localizable.strings
+++ b/SampleStringsiOS/de.lproj/Localizable.strings
@@ -11,10 +11,10 @@
 "MAIN_TITLE_NOTIFICATIONS" = "Benachrichtigungenasdasd SAKSA TEST TEST2";
 
 /* How to sync: V650 */
-"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " SAKSA Um asdasddeinen V650 mit der Flow App zu synchronisieren, asdasdwähle iasdas Seitenmenü deines V650 die Option 'Sync. asdasdmit Mobilgerät'.";
+"SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " SAKSA Um asdasdasdaddeinen V650 mit der Flow App zu synchronisieren, asdasdwähle iasdas Seitenmenü deines V650 die Option 'Sync. asdasdmit Mobilgerät'.";
 
 /* % of FTP unit */
-"UNIT_PERCENT_OF_FTP" = "% FTP jeeee?? jups";
+"UNIT_PERCENT_OF_FTP" = "% FTP jeeee?? jups ";
 
 /* Benefit no description */
 "BENEFIT_NO_DESCRIPTION" = "  iltatesti asdasdtesDu musst mindestens 10 Minuten mit über asdasdas50 % deiner asdsd berechmaimlensdsa Herzfrequenz traeren, um Feedback zu erhalten. Jups";
