--- a/testing/testing2/SampleStringsiOS/cs.lproj/Localizable.strings
+++ b/testing/testing2/SampleStringsiOS/cs.lproj/Localizable.strings
@@ -8,7 +8,7 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "MUUTOS Uasdpozorněn Toimiikohan samalla repolla? Iltatesti";
+"MAIN_TITLE_NOTIFICATIONS" = "MUUTOS Uasdpozorněn Toimiikohan samalla repolla? Iltatesti testi";
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " Tsekki Chcete-li asdasdsynchronizovat přístroj V650 s aplikací Flow, zvolte „Synchronizovat sasda mobilem“ v postranní nabídce přístroje V650.";
