--- a/SampleStringsiOS/es.lproj/Localizable.strings
+++ b/SampleStringsiOS/es.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "BENEFIT_NO_DESCRIPTION" = "Time stamppi testiNecesitas entrenar al menos 10 minutos por encima del 50% de tu frecuencia cardíaca máxima calculada para obtener feedback.";
 
 /* Basic steady state training benefit (SRP.02038.71.61) */
-"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Entrenamiento básico y por ritmo constante Johannesss ";
+"BENEFIT_VALUE_BASIC_STEADY_STATE_BASIC" = "Entrenamiento básico y por ritmo constante Johannes";
 
 /* Sync notification success */
 "SYNC_NOTIFICATION_DEVICE_SUCCESS" = "Sincronización de datos con tu %@ completada.";
