--- a/SampleStringsiOS/de.lproj/Localizable.strings
+++ b/SampleStringsiOS/de.lproj/Localizable.strings
@@ -8,13 +8,13 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "Benachrichtigungenasdasd SAKSA TEST TEST2"; eipä ollu
+"MAIN_TITLE_NOTIFICATIONS" = "Benachrichtigungenasdasd SAKSA TEST TEST2"; eipä
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = " SAKSA Um asdasdasdaddeinen V650 mit der Flow App zu synchronisieren, asdasdwähle iasdas Seitenmenü deines V650 die Option 'Sync. asdasdmit Mobilgerät'.";
 
 /* % of FTP unit */
-"UNIT_PERCENT_OF_FTP" = "% FTP jeeee?? jups ";
+"UNIT_PERCENT_OF_FTP" = "% FTP jeeee?? jups";
 
 /* Benefit no description */
 "BENEFIT_NO_DESCRIPTION" = "  iltatesti tesDu musst mindestens 10 Minuten mit über asdasdas50 % deiner asdsd berechmaimlensdsa Herzfrequenz traeren, um Feedback zu erhalten. Jups";
