--- a/SampleStringsiOS/ko.lproj/Localizable.strings
+++ b/SampleStringsiOS/ko.lproj/Localizable.strings
@@ -8,7 +8,7 @@
  */
 
 /* Notifications main title */
-"MAIN_TITLE_NOTIFICATIONS" = "알림";
+"MAIN_TITLE_NOTIFICATIONS" = "알림 Pöytä koreaksi";
 
 /* How to sync: V650 */
 "SUPPORT_ITEM_HOW_TO_SYNC_POLAR_V650" = "V650과 Flow 앱을 동기화하려면, V650의 사이드 메뉴에서 \"모바일과의 동기화\"를 선택하십시오.";
